salesforce/metadata/objects/MSD_Run__c.object
<CustomObject>
    <label>MSD Run</label>
    <nameField>
        <displayFormat>RUN-{0000}</displayFormat>
        <label>Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSD Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>MSD_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schedule</label>
        <referenceTo>MSD_Schedule__c</referenceTo>
        <relationshipLabel>Runs</relationshipLabel>
        <relationshipName>Runs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSD_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Partial Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSD_StartedAt__c</fullName>
        <label>Started At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MSD_FinishedAt__c</fullName>
        <label>Finished At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MSD_CorrelationId__c</fullName>
        <label>Correlation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSD_AgentId__c</fullName>
        <label>Agent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSD_RecordsRead__c</fullName>
        <label>Records Read</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSD_RecordsProcessed__c</fullName>
        <label>Records Processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSD_RecordsSucceeded__c</fullName>
        <label>Records Succeeded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSD_RecordsFailed__c</fullName>
        <label>Records Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSD_ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>